--- a/index.html
+++ b/index.html
@@ -59,71 +59,90 @@
         <h2 class="visually-hidden">Слайдер</h2>
         <ol class="slider-list">
           <li class="slider-item">
-            <div class="slider-main-content">
-              <div class="slider-text">
-                <h3 class="slider-title">Нежный пломбир с клубничным джемом</h3>
-                <p>Натуральное мороженое из свежих сливок
+            <div class="slide-main-content">
+              <div class="slide-text">
+                <h3 class="slide-title">Нежный пломбир с клубничным джемом</h3>
+                <p class="slide-description">Натуральное мороженое из свежих сливок
                   и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
-                <a class="slider-order-btn" href="#">Заказать</a>
+                <a class="btn btn-basic slide-order-btn" href="#">Заказать</a>
               </div>
               <ol class="slider-image-list">
                 <li class="slider-image-item slider-image-current-item">
                   <img class="slider-image" src="" alt="Нежный пломбир с клубничным джемом.">
                   <div class="slider-navigation">
-                    <button class="slider-navigation-button slider-button-prev">
+                    <button class="slider-navigation-button slider-button-prev" type="button">
                       <span class="visually-hidden">Предыдущий слайд</span>
                     </button>
-                    <button class="slider-navigation-button slider-button-next">
+                    <button class="slider-navigation-button slider-button-next" type="button">
                       <span class="visually-hidden">Следующий слайд</span>
                     </button>
                   </div>
                 </li>
+                <li class="slider-image-item slider-image-next-item">
+                  <img class="slider-image" src="" alt="Сливочное мороженое со вкусом банана.">
+                </li>
+                <li class="slider-image-item slider-image-next-item">
+                  <img class="slider-image" src="" alt="Карамельный пломбир с маршмеллоу.">
+                </li>
               </ol>
             </div>
-
           </li>
           <li class="slider-item">
-            <div class="slider-main-content">
-              <div class="slider-text">
-                <h3 class="slider-title">Сливочное мороженое со вкусом банана</h3>
-                <p>Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий
+            <div class="slide-main-content">
+              <div class="slide-text">
+                <h3 class="slide-title">Сливочное мороженое со вкусом банана</h3>
+                <p class="slide-description">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и
+                  наслаждение даже в самый жаркий
                   летний день.</p>
-                <a class="slider-order-btn" href="#">Заказать</a>
+                <a class="btn btn-basic slide-order-btn" href="#">Заказать</a>
               </div>
               <ol class="slider-image-list">
                 <li class="slider-image-item slider-image-current-item">
                   <img class="slider-image" src="" alt="Сливочное мороженое со вкусом банана.">
                   <div class="slider-navigation">
-                    <button class="slider-navigation-button slider-button-prev">
+                    <button class="slider-navigation-button slider-button-prev" type="button">
                       <span class="visually-hidden">Предыдущий слайд</span>
                     </button>
-                    <button class="slider-navigation-button slider-button-next">
+                    <button class="slider-navigation-button slider-button-next" type="button">
                       <span class="visually-hidden">Следующий слайд</span>
                     </button>
                   </div>
+                </li>
+                <li class="slider-image-item slider-image-next-item">
+                  <img class="slider-image" src="" alt="Карамельный пломбир с маршмеллоу.">
+                </li>
+                <li class="slider-image-item slider-image-next-item">
+                  <img class="slider-image" src="" alt="Нежный пломбир с клубничным джемом.">
                 </li>
               </ol>
             </div>
           </li>
           <li class="slider-item">
-            <div class="slider-main-content">
-              <div class="slider-text">
-                <h3 class="slider-title">Карамельный пломбир с маршмеллоу</h3>
-                <p>Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца сладкоежек всех
+            <div class="slide-main-content">
+              <div class="slide-text">
+                <h3 class="slide-title">Карамельный пломбир с маршмеллоу</h3>
+                <p class="slide-description">Необычный сладкий десерт с карамельным топпингом и кусочками зефира
+                  завоюет сердца сладкоежек всех
                   возрастов.</p>
-                <a class="slider-order-btn" href="#">Заказать</a>
+                <a class="btn btn-basic slide-order-btn" href="#">Заказать</a>
               </div>
               <ol class="slider-image-list">
                 <li class="slider-image-item slider-image-current-item">
                   <img class="slider-image" src="" alt="Карамельный пломбир с маршмеллоу.">
                   <div class="slider-navigation">
-                    <button class="slider-navigation-button slider-button-prev">
+                    <button class="slider-navigation-button slider-button-prev" type="button">
                       <span class="visually-hidden">Предыдущий слайд</span>
                     </button>
-                    <button class="slider-navigation-button slider-button-next">
+                    <button class="slider-navigation-button slider-button-next" type="button">
                       <span class="visually-hidden">Следующий слайд</span>
                     </button>
                   </div>
+                </li>
+                <li class="slider-image-item slider-image-next-item">
+                  <img class="slider-image" src="" alt="Нежный пломбир с клубничным джемом.">
+                </li>
+                <li class="slider-image-item slider-image-next-item">
+                  <img class="slider-image" src="" alt="Сливочное мороженое со вкусом банана.">
                 </li>
               </ol>
             </div>
@@ -166,8 +185,187 @@
           </ul>
         </div>
       </section>
+      <section class="presents">
+        <h2 class="presents-title">Заказывайте мороженое и получайте подарки!</h2>
+        <div class="presents-list">
+          <div class="present-block">
+            <h3 class="present-title">Малинка даром!</h3>
+            <p class="present-description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку
+              малинового варенья бесплатно.</p>
+            <a class="btn btn-basic present-btn" href="#">Хочу подарок</a>
+          </div>
+          <div class="present-block">
+            <h3 class="present-title">Маршмеллоу даром!</h3>
+            <p class="present-description">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок
+              совершенно бесплатно.</p>
+            <a class="btn btn-basic present-btn" href="#">Хочу подарок</a>
+          </div>
+        </div>
+      </section>
+      <section class="popular-tastes">
+        <h2 class="popular-tastes-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
+        <ul class="popular-tastes-list">
+          <li class="popular-taste-item">
+            <img class="popular-taste-image" src="" alt="Малинка">
+            <h3 class="popular-taste-title">Малинка</h3>
+            <p class="popular-taste-description">Сливочное мороженое с малиновым джемом</p>
+            <div class="popular-taste-price-block">
+              <p class="popular-taste-price">310 ₽/кг</p>
+              <a class="popular-taste-link" href="#">
+                <span class="visually-hidden">В корзину</span>
+              </a>
+            </div>
+          </li>
+          <li class="popular-taste-item">
+            <img class="popular-taste-image" src="" alt="Фисташка">
+            <h3 class="popular-taste-title">Фисташка</h3>
+            <p class="popular-taste-description">Фисташковый пломбир с кусочками шоколада</p>
+            <div class="popular-taste-price-block">
+              <p class="popular-taste-price">340 ₽/кг</p>
+              <a class="popular-taste-link" href="#">
+                <span class="visually-hidden">В корзину</span>
+              </a>
+            </div>
+          </li>
+          <li class="popular-taste-item">
+            <img class="popular-taste-image" src="" alt="Черника">
+            <h3 class="popular-taste-title">Черника</h3>
+            <p class="popular-taste-description">Крем-брюле
+              с черничным джемом</p>
+            <div class="popular-taste-price-block">
+              <p class="popular-taste-price">330 ₽/кг</p>
+              <a class="popular-taste-link" href="#">
+                <span class="visually-hidden">В корзину</span>
+              </a>
+            </div>
+          </li>
+          <li class="popular-taste-item">
+            <img class="popular-taste-image" src="" alt="Бабл-гам">
+            <h3 class="popular-taste-title">Бабл-гам</h3>
+            <p class="popular-taste-description">Ванильный пломбир
+              со сладкой посыпкой</p>
+            <div class="popular-taste-price-block">
+              <p class="popular-taste-price">320 ₽/кг</p>
+              <a class="popular-taste-link" href="#">
+                <span class="visually-hidden">В корзину</span>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="about-gllacy">
+        <div class="about-gllacy-block">
+          <h2 class="about-gllacy-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного
+            производства на развес</h2>
+          <ul class="about-gllacy-list">
+            <li class="about-gllacy-item about-gllacy-item-icecream">Всё наше мороженое изготавливается на собственном
+              производстве с использованием современного оборудования и проверенных временем технологий.</li>
+            <li class="about-gllacy-item about-gllacy-item-milk">Закупка ингредиентов производится только
+              у проверенных фермерских хозяйств, с которыми
+              нас связывает долговременное сотрудничество.</li>
+            <li class="about-gllacy-item about-gllacy-item-natural">Для приготовления мороженого используются сливки и
+              молоко высочайшего качества. Все ингредиенты
+              и добавки произведены из натурального сырья.</li>
+            <li class="about-gllacy-item about-gllacy-item-temperature">Доставка нашего мороженого осуществляется в
+              специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
+          </ul>
+        </div>
+      </section>
+      <div class="blog-subscribe">
+        <section class="blog">
+          <p class="blog-subtitle">Новое в нашем блоге</p>
+          <h2 class="blog-title">10 способов сервировки фруктовых щербетов
+            к столу</h2>
+        </section>
+        <section class="subscribe">
+          <h2 class="visually-hidden">Рассылка</h2>
+          <div class="subscribe-block">
+            <p class="subscribe-description">Подпишитесь на нашу сладкую рассылку и будьте всегда
+              в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды.
+              Честно =)</p>
+          </div>
+          <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru/">
+            <label class="visually-hidden" for="subscribe">E-mail</label>
+            <input class="subscribe-input" name="subscribe" id="subscribe" type="email" placeholder="email@example.com"
+              required>
+            <button class="btn btn-secondary btn-subscribe" type="submit">Отправить</button>
+          </form>
+        </section>
+      </div>
+      <section class="delivery">
+        <div class="delivery-text">
+          <h2 class="delivery-title">Доставка любимого мороженого на дом</h2>
+          <p class="delivery-description">Хочется полакомиться любимым десертом, но нет времени съездить в магазин?
+            Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
+        </div>
+        <form class="delivery-form" method="post" action="https://echo.htmlacademy.ru/">
+          <p class="delivery-form-info">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.
+          </p>
+          <label class="delivery-form-label" for="delivery-date">Дата</label>
+          <input class="delivery-form-input" name="delivery" id="delivery-date" type="date" placeholder="01.04.2020"
+            required>
+          <label class="delivery-form-label" for="delivery-phone">Телефон</label>
+          <input class="delivery-form-input" name="delivery" id="delivery-phone" type="tel"
+            placeholder="+7 800 999-00-00" required>
+          <label class="delivery-form-label" for="delivery-adress">Адрес</label>
+          <input class="delivery-form-input" name="delivery" id="delivery-adress" type="text"
+            placeholder="ул. Большая Конюшенная, 19/8" required>
+          <button class="btn btn-secondary btn-delivery" type="submit">Отправить</button>
+        </form>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Контактные данные</h2>
+        <div class="contacts-block">
+          <p class="contacts-text">Адрес главного офиса и офлайн-магазина:</p>
+          <p class="contacts-info contacts-adress">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
+          <p class="contacts-text">Для заказов по телефону:</p>
+          <p class="contacts-info contacts-phone">+7 (812) 812-12-12</p>
+          <p class="contacts-subscription">(с 10 до 20 ежедневно)</p>
+          <a class="btn btn-secondary btn-delivery" href="#">Форма обратной связи</a>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="main-footer">
+      <section class="footer-social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="#">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="#">
+              <span class="visually-hidden">Вк</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-info-links">
+        <ul class="footer-info-links-list">
+          <li class="footer-info-links-item">
+            <a class="footer-info-link footer-info-link-providers" href="#">Для поставщиков</a>
+          </li>
+          <li class="footer-info-links-item">
+            <a class="footer-info-link" href="#">Наши документы</a>
+          </li>
+          <li class="footer-info-links-item">
+            <a class="footer-info-link" href="#">О производстве</a>
+          </li>
+          <li class="footer-info-links-item">
+            <a class="footer-info-link" href="#">Экологические стандарты</a>
+          </li>
+        </ul>
+      </section>
+      <section class="html-academy-info">
+        <a class="html-academy-link-logo" href="#"></a>
+        <p class="html-academy-copyright">Сделано в <a class="html-academy-link" href="#">.html academy</a> © 2021</p>
+      </section>
+    </footer>
   </body>
 
 </html>
