--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </a>
             </li>
             <li class="header-navigation-item">
-              <a class="header-navigation-link header-navigation-catalog-link" href="#">
+              <a class="header-navigation-link header-navigation-catalog-link" href="./catalog.html">
                 Каталог
                 <svg class="header-navigation-icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
                   focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
@@ -66,7 +66,7 @@
           <h2 class="visually-hidden">Слайдер</h2>
           <ol class="slider-list">
             <li class="slide">
-              <div class="slide-text">
+              <div class="slide-text slide-text-first">
                 <h3 class="slide-title">Нежный пломбир<br>с клубничным джемом</h3>
                 <p class="slide-description">Натуральное мороженое из свежих сливок<br>
                   и молока с вкуснейшим клубничным джемом –<br>это идеальный десерт для всей семьи.</p>
@@ -86,8 +86,9 @@
                   </div>
                 </li>
                 <li class="slider-image-next-item">
+
                   <img class="slider-image" src="./images/banana-icecream.png"
-                    alt="Сливочное мороженое со вкусом банана." width="66" height="150">
+                    alt="Сливочное мороженое со вкусом банана." width="55" height="140">
                 </li>
                 <li class="slider-image-next-item">
                   <img class="slider-image" src="./images/caramel-icecream.png" alt="Карамельный пломбир с маршмеллоу."
@@ -296,11 +297,11 @@
             <ul class="about-gllacy-list">
               <li class="about-gllacy-item about-gllacy-item-icecream">Всё наше мороженое изготавливается на собственном
                 производстве с использованием современного оборудования и проверенных временем технологий.</li>
-              <li class="about-gllacy-item about-gllacy-item-milk">Закупка ингредиентов производится только
-                у проверенных фермерских хозяйств, с которыми
+              <li class="about-gllacy-item about-gllacy-item-milk">Закупка ингредиентов производится только<br>
+                у проверенных фермерских хозяйств, с которыми<br>
                 нас связывает долговременное сотрудничество.</li>
               <li class="about-gllacy-item about-gllacy-item-natural">Для приготовления мороженого используются сливки и
-                молоко высочайшего качества. Все ингредиенты
+                молоко высочайшего качества. Все ингредиенты<br>
                 и добавки произведены из натурального сырья.</li>
               <li class="about-gllacy-item about-gllacy-item-temperature">Доставка нашего мороженого осуществляется в
                 специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
@@ -316,7 +317,7 @@
           <section class="subscribe">
             <h2 class="visually-hidden">Рассылка</h2>
             <div class="subscribe-block">
-              <p class="subscribe-description">Подпишитесь на нашу сладкую рассылку и будьте всегда
+              <p class="subscribe-description">Подпишитесь на нашу сладкую рассылку и будьте всегда<br>
                 в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной
                 ерунды.
                 Честно =)</p>
@@ -336,7 +337,8 @@
               Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
           </div>
           <form class="delivery-form" method="post" action="https://echo.htmlacademy.ru/">
-            <p class="delivery-form-info">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.
+            <p class="delivery-form-info">Укажите адрес и дату доставки, и мы свяжемся<br>с вами, чтобы подтвердить
+              заказ.
             </p>
             <label class="delivery-form-label delivery-form-label-date" for="delivery-date">Дата</label>
             <input class="delivery-form-input delivery-form-input-date" name="delivery" id="delivery-date" type="date"
@@ -386,7 +388,7 @@
         <section class="footer-info-links">
           <h2 class="visually-hidden">Полезные ссылки</h2>
           <ul class="footer-info-links-list">
-            <li class="footer-info-links-item">
+            <li class="footer-info-link-item">
               <a class="footer-info-link footer-info-link-providers" href="#">Для поставщиков</a>
             </li>
             <li class="footer-info-links-item">
