--- a/catalog.html
+++ b/catalog.html
@@ -73,14 +73,115 @@
                 </header>
                 <section class="catalog-filter">
                     <h2 class="visually-hidden">Фильтр</h2>
-                    <form class="catalog-filter-form">
-                        <label>
-                            <select>
-                                <option>По популярности</option>
-                                <option>По цене min</option>
-                                <option>По цене max</option>
-                            </select>
-                        </label>
+                    <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
+                        <div class="catalog-filter-row">
+                            <fieldset class="filter-ruleset">
+                                <legend class="filter-ruleset-title">Сортировка:</legend>
+                                <label class="visually-hidden">Сортировка</label>
+                                <select class="catalog-sort-select" name="sort" id="sort">
+                                    <option>по популярности</option>
+                                    <option>по цене min</option>
+                                    <option>по цене max</option>
+                                </select>
+                            </fieldset>
+                            <fieldset class="filter-ruleset">
+                                <legend class="filter-ruleset-title">Цена: 100 ₽ – 500 ₽</legend>
+                                <div class="range-filter-container">
+                                    <div class="range-filter-scale">
+                                        <div class="range-filter-bar" style="left: 0; width: 119px">
+                                            <button class="range-filter-toggle range-filter-toggle-min" type="button">
+                                                <span class="visually-hidden">Ползунок минимальной цены</span>
+                                            </button>
+                                            <button class="range-filter-toggle range-filter-toggle-max" type="button">
+                                                <span class="visually-hidden">Ползунок максимальной цены</span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset class="filter-ruleset">
+                                <legend class="filter-ruleset-title">Жирность:</legend>
+                                <ul class="catalog-filter-list">
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-radio">
+                                            <input class="visually-hidden" type="radio" id="0" name="fat" value="0">
+                                            <span class="control-mark-radio"></span>
+                                            <span class="filter-control-label">0%</span>
+                                        </label>
+                                    </li>
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-radio">
+                                            <input class="visually-hidden" type="radio" id="10" name="fat" value="10">
+                                            <span class="control-mark-radio"></span>
+                                            <span class="filter-control-label">до 10%</span>
+                                        </label>
+                                    </li>
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-radio">
+                                            <input class="visually-hidden" type="radio" id="30" name="fat" value="30">
+                                            <span class="control-mark-radio"></span>
+                                            <span class="filter-control-label">до 30%</span>
+                                        </label>
+                                    </li>
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-radio">
+                                            <input class="visually-hidden" type="radio" id="more30" name="fat"
+                                                value="more30">
+                                            <span class="control-mark-radio"></span>
+                                            <span class="filter-control-label">выше 30%</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </fieldset>
+                        </div>
+                        <div class="catalog-filter-row">
+                            <fieldset class="filter-ruleset">
+                                <legend class="filter-ruleset-title">Наполнители:</legend>
+                                <ul class="catalog-filter-list">
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-checkbox">
+                                            <input class="visually-hidden" type="checkbox" id="chocolate" name="fill"
+                                                value="chocolate">
+                                            <span class="control-mark-checkbox"></span>
+                                            <span class="filter-control-label">шоколадные</span>
+                                        </label>
+                                    </li>
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-checkbox">
+                                            <input class="visually-hidden" type="checkbox" id="sugar" name="fill"
+                                                value="sugar">
+                                            <span class="control-mark-checkbox"></span>
+                                            <span class="filter-control-label">сахарные посыпки</span>
+                                        </label>
+                                    </li>
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-checkbox">
+                                            <input class="visually-hidden" type="checkbox" id="fruit" name="fill"
+                                                value="fruit">
+                                            <span class="control-mark-checkbox"></span>
+                                            <span class="filter-control-label">фрукты</span>
+                                        </label>
+                                    </li>
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-checkbox">
+                                            <input class="visually-hidden" type="checkbox" id="syrup" name="fill"
+                                                value="syrup">
+                                            <span class="control-mark-checkbox"></span>
+                                            <span class="filter-control-label">сиропы</span>
+                                        </label>
+                                    </li>
+                                    <li class="catalog-filter-item">
+                                        <label class="catalog-filter-control filter-checkbox">
+                                            <input class="visually-hidden" type="checkbox" id="jam" name="fill"
+                                                value="jam">
+                                            <span class="control-mark-checkbox"></span>
+                                            <span class="filter-control-label">джемы</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </fieldset>
+                            <button class="btn btn-submit filter-btn" type="submit">Применить</button>
+                        </div>
                     </form>
                 </section>
                 <ul class="popular-tastes-list">
