--- a/catalog.html
+++ b/catalog.html
@@ -184,7 +184,7 @@
                         </div>
                     </form>
                 </section>
-                <section class="popular-tastes">
+                <section class="popular-tastes popular-tastes-catalog">
                     <h2 class="visually-hidden">Каталог сливочного мороженого</h2>
                     <ul class="popular-tastes-list">
                         <li class="popular-taste-item">
